--- a/css/style.css
+++ b/css/style.css
@@ -1,65 +1,48 @@
 body{
   font-family: 'PT Sans';
   color: #6A6A6A;
+  padding:20px;
+  padding-bottom: 200px;
 }
-p{
-  margin: 2px;
+h1, p, input{
+  margin: 5px;
 }
-p.text-small{
-  font-size:12px;
-}
-#container{
-  position: relative;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 500px;
-  border: 1px dashed gray;
-}
-#profile-container{
-  border: 1px dashed blue;
 
-  /* flex */
+/*styling for header (profile image, name, role) */
+#header{
   display: flex;
   flex-direction: row;
-  justify-content: center;
 }
 #bio{
-  text-align:left;
   margin-left: 20px;
 }
 #name{
   font-size: 30px;
 }
 #profileImg{
-  width: 200px;
-  height: 200px;
-  margin-right: 30px;
+  width: 80px;
+  height: 80px;
   -webkit-filter: drop-shadow(0px 2px 4px rgba(150,150,150,.8));
 }
-.social-container img{
-  width: 30px;
-  margin-right: 5px;
-  margin-top: 2px;
-  opacity: .6;
-}
-ul{
-  position: absolute;
-  bottom: 0px;
 
-  left:0;
-  right:0;
+/*react styling (visitors)*/
 
-  list-style: none;
+h1{
+  font-weight: normal;
+  font-size: 20px;
+  margin-top: 30px;
+  text-decoration: underline;
 }
-li{
-  display: inline;
-  margin-left: 20px;
-  margin-right: 20px;
-}
-li:hover{
-  cursor: pointer;
-   color: #C57373;
-  font-weight: bold;
+
+input{
+  font-family: 'PT Sans';
+  font-size: 15px;
+  border: 1px;
+  border-color: rgba(255, 255, 255, 0);
+  border-bottom: 1px solid #979797;
+  padding:5px;
+  padding-left: 0px;
+  outline:0;
+  width: 150px;
+  border-radius:0px;
 }
